# kiite-cafe-slack-notifier

./: .env.sample  .gitignore  Cargo.toml  README.md
src/: main.rs
